--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       WCT.loadSuites([
         'material-input.html',
         'material-input.html?dom=shadow',
+        'material-input-dist.html',
       ]);
     </script>
 
