--- a/test/index.html
+++ b/test/index.html
@@ -9,8 +9,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 --><html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../bower_components/web-component-tester/browser.js"></script>
+    <script src="../node_modules/webcomponents.js/webcomponents-lite.js"></script>
+    <script src="../node_modules/web-component-tester/browser.js"></script>
     <script src="../src/material-input.js"></script>
   </head>
   <body>
