--- a/test/material-input-dist.html
+++ b/test/material-input-dist.html
@@ -2,8 +2,8 @@
 <html>
     <head>
     <meta charset="utf-8">
-    <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
-    <script src="../bower_components/web-component-tester/browser.js"></script>
+    <script src="../node_modules/webcomponents.js/webcomponents-lite.js"></script>
+    <script src="../node_modules/web-component-tester/browser.js"></script>
     <script src="../dist/material-input.js"></script>
     </head>
     <body>
